fix another spacing issue

--- a/app/assets/stylesheets/_study.css.scss
+++ b/app/assets/stylesheets/_study.css.scss
@@ -2,6 +2,9 @@
 
 .studies__list {
   @include border_list;
+  @include small {
+    padding-top: $space;
+  }
 
   a {
     color: inherit;
